[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'tfchain-runtime'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = '4.0.0'

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.pallet-tfgrid]
default-features = false
path = "../../pallets/pallet-tfgrid"

[dependencies.pallet-smart-contract]
default-features = false
path = "../../pallets/pallet-smart-contract"

[dependencies.pallet-burning]
default-features = false
path = "../../pallets/pallet-burning"

[dependencies.pallet-kvstore]
default-features = false
path = "../../pallets/pallet-kvstore"

[dependencies.pallet-tft-bridge]
default-features = false
git = "https://github.com/threefoldtech/tfchain_tft_bridge"
package = "pallet-tft-bridge"
branch = "main"
#path = "../../../tfchain_tft/pallet-tft-bridge"

[dependencies.pallet-tft-price]
default-features = false
path = "../../pallets/pallet-tft-price"

[dependencies.pallet-runtime-upgrade]
default-features = false
path = "../../pallets/pallet-runtime-upgrade"

[dependencies.validatorset]
default-features = false
package = "substrate-validator-set"
path = "../../pallets/substrate-validator-set"

[dependencies]
hex-literal = { optional = true, version = '0.3.1' }
serde = { features = ['derive'], optional = true, version = '1.0.119' }
smallvec = "1.4.0"

# Substrate dependencies
frame-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
frame-executive = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-system-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
frame-system-rpc-runtime-api = { default-features = false, version = '3.0.0' }
pallet-aura = { default-features = false, version = '3.0.0' }
pallet-balances = { default-features = false, version = '3.0.0' }
pallet-grandpa = { default-features = false, version = '3.0.0' }
pallet-randomness-collective-flip = { default-features = false, version = '3.0.0' }
pallet-sudo = { default-features = false, version = '3.0.0' }
pallet-timestamp = { default-features = false, version = '3.0.0' }
pallet-transaction-payment = { default-features = false, version = '3.0.0' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = '3.0.0' }
sp-api = { default-features = false, version = '3.0.0' }
sp-block-builder = { default-features = false, version = '3.0.0' }
sp-consensus-aura = { default-features = false, version = '0.9.0' }
sp-core = { default-features = false, version = '3.0.0' }
sp-inherents = { default-features = false, version = '3.0.0' }
sp-offchain = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-session = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
sp-transaction-pool = { default-features = false, version = '3.0.0' }
sp-version = { default-features = false, version = '3.0.0' }
pallet-scheduler = { default-features = false, version = '3.0.0' }
sp-staking = { default-features = false, version = '3.0.0' }
pallet-session = { default-features = false, version = '3.0.0', features = ['historical'] }
pallet-collective = { version = "3.0.0", default-features = false }
pallet-membership = { version = "3.0.0", default-features = false }
pallet-authorship = { version = "3.0.0", default-features = false }

[features]
default = ['std']
runtime-benchmarks = [
    'hex-literal',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
    'pallet-collective/runtime-benchmarks'
]
std = [
    'codec/std',
    'serde',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'pallet-tfgrid/std',
    'pallet-tft-bridge/std',
    'pallet-tft-price/std',
    'pallet-smart-contract/std',
    'pallet-kvstore/std',
    'pallet-scheduler/std',
    'sp-staking/std',
    'pallet-session/std',
    'validatorset/std',
    'pallet-burning/std',
    'pallet-runtime-upgrade/std',
    'pallet-collective/std',
    'pallet-membership/std',
    'pallet-authorship/std'
]
