[package]
authors = ['Threefoldtech <https://github.com/threefoldtech>']
description = "Shared traits and structs used across the TFChain pallets"
edition = "2018"
name = "tfchain-support"
repository = 'https://github.com/threefoldtech/tfchain'
version = "1.0.0"

[dependencies]
parity-scale-codec = {workspace = true, features = ["derive"]}
scale-info = { workspace = true, features = ["derive"] }
frame-support.workspace = true
frame-system.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
valip = "0.4.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-std/std",
  "scale-info/std"
]