[package]
authors = ['Threefoldtech <https://github.com/threefoldtech>']
description = 'Threefold key-value store'
edition = '2018'
homepage = 'https://threefold.io'
license = 'Apache'
name = 'pallet-kvstore'
repository = 'https://github.com/threefoldtech/tfchain_pallets'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
serde = { version = '1.0.100', default-features = false, features = ['derive'], optional = true }

# Substrate packages
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
frame-system =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
sp-runtime =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
sp-std =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
sp-storage =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
sp-io =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
sp-core =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-std/std',
    'sp-storage/std',
    'serde',
    'sp-io/std',
	'scale-info/std'
]
