[package]
authors = ['Threefoldtech <https://github.com/threefoldtech>']
description = 'Substrate TFchain Minting pallet'
edition = '2021'
homepage = 'https://threefold.io'
license = 'Apache'
name = 'pallet-minting'
repository = 'https://github.com/threefoldtech/tfchain_pallets'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.log]
default-features = false
version = '0.4.14'

[dependencies]
# Substrate packages
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-support =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
frame-system =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-std =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-io =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
pallet-timestamp =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
pallet-balances =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }

# Local dependencies
pallet-tfgrid = { path = "../pallet-tfgrid" }
tfchain-support = { path = "../../support", default-features = false }

[dev-dependencies]
sp-core =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
env_logger = "*"

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'scale-info/std',
	'sp-runtime/std',
	'sp-std/std',
	'sp-io/std',
	'pallet-timestamp/std',
	'pallet-balances/std',
	'pallet-tfgrid/std',
	'tfchain-support/std',
	'log/std'
]