[package]
authors = ['Threefoldtech <https://github.com/threefoldtech>']
description = 'Substrate TFchain runtime upgrade pallet'
edition = '2018'
homepage = 'https://threefold.io'
license = 'Apache'
name = 'pallet-runtime-upgrade'
repository = 'https://github.com/threefoldtech/tfchain_pallets'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
# Substrate packages
frame-support =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
frame-system =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
sp-std =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
sp-io =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

[features]
default = ['std']
std = [
	'frame-support/std',
	'frame-system/std',
	'sp-std/std',
	'codec/std',
	'sp-io/std',
	'scale-info/std'
]