[package]
authors = ['Threefoldtech <https://github.com/threefoldtech>']
description = 'Substrate TFchain runtime upgrade pallet'
edition = '2018'
homepage = 'https://threefold.io'
license = 'Apache'
name = 'pallet-runtime-upgrade'
repository = 'https://github.com/threefoldtech/tfchain_pallets'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# Substrate packages
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

frame-support =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
frame-system =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
sp-std =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
sp-io =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }

[features]
default = ['std']
std = [
	'frame-support/std',
	'frame-system/std',
	'sp-std/std',
	'codec/std',
	'sp-io/std',
	'scale-info/std'
]